# impall

./: .coveragerc  .envrc  .gitignore  .travis.yml  404.html  CHANGELIST  LICENSE  README.md  README.rst  all_test.py  impall.py  import_all.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test.sh  test_impall.py  test_requirements.txt  tox.ini
.github/workflows/: python-package.yml
docs/: index.md
test/: all_test.py  bad_import.py  import_all_test.py  test_impall.py
test/edge/edge/: sure.py  yes.py
test/edge/edge/sub2/sub/: two.py
test/import_all/: all_test.py
test/sub/: one.py
