[tool.doks]
auto = true

[tool.poetry]
authors = ["Tom Ritchford <tom@swirly.com>"]
description = "🛎 Test-import all modules 🛎"
homepage = "https://github.com/rec/impall"
name = "impall"
readme = "README.md"
repository = "https://github.com/rec/impall"
version = "1.5.3"
documentation = "https://rec.github.io/impall"

[tool.poetry.dependencies]
python = '>=3.8'

[tool.poetry.group.dev.dependencies]
coverage = "*"
flake8 = "*"
pyfakefs = "*"
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
ruff = "*"

[tool.poetry.scripts]
impall = 'impall:report'

[tool.coverage.run]
branch = true
source = ["impall"]

[tool.coverage.report]
fail_under = 69
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
